  very weird behavior... This also fixes a bug where set::spamfilter::ban-reason
  would have the value of ban-time.
- Improved spamfilter again.
  - The new syntax is:
    /spamfilter [what] [type] [action] [tkltime] [reason] [regex]
    [tkltime] specifies the duration of any *lines placed by this rule.
    [reason] specifies the *line, kill and/or block reason.. no spaces
    allowed, but '_' will be escaped to a space.
    In both cases you can simply use '-' to skip and use the default.
    Ex: /spamfilter add p block - - Come watch me on my webcam
        /spamfilter add p gline 3h Please_go_to_www.viruscan.xx/
        nicepage/virus=blah Come watch me on my webcam
  - A message is now shown if the msg/notice/dcc is blocked.
  - There are 2 new spamfilter action types:
    'dccblock' will mark the user so (s)he's unable to send any files by DCC.
    'viruschan' will part the user from all channels and join
     set::spamfilter::virus-help-channel (default: #help).
     this action might be improved to do more later.
  - Internal: added EXTTKL PROTOCTL, this determinates if 10 parameters
    instead of 8 are supported for m_tkl (used by spamfilter add).
  This new system needs some testing... :)
- Fixed a bug in 'Flood from unknown connection' (#0001566).
- Rewrote a great deal of the remote include code to make it work on Windows
  due to Microsoft insanity. 
- Added /tempshun, temporary shuns the current session of specified nick
  (just like the 'tempshun' in spamfilter and ban version). Suggested by
  Cnils (#0001526). [docs/help.conf will be updated later]
- Updated docs on tempshun and new spamfilter features.
- Modulized: addline, addmotd, addomotd, wallops, globops, locops, chatops,
  admin, trace.
- Removed: gnotice, goper
- Modulized: netinfo, links, help, rules, close, map, eos
- Made it compile on win32 again
- Modulized: server, stats
- Modulized: svsfline, dccdeny, undccdeny, whowas