@@ -680,3 +680,5 @@ extern char *unreal_decodespace(char *s);
 extern Link *helpign;
 extern aMotd *rules;
 extern fdlist default_fdlist, busycli_fdlist, serv_fdlist, oper_fdlist;
+extern void DCCdeny_add(char *filename, char *reason, int type);
+extern void DCCdeny_del(ConfigItem_deny_dcc *deny);
