@@ -155,7 +155,7 @@ MOD_FILES=SRC/L_COMMANDS.OBJ SRC/M_CHGHOST.OBJ SRC/M_SDESC.OBJ SRC/M_SETIDENT.OB
  SRC/M_ADMIN.OBJ SRC/M_TRACE.OBJ SRC/M_NETINFO.OBJ SRC/M_LINKS.OBJ SRC/M_HELP.OBJ \
  SRC/M_RULES.OBJ SRC/M_CLOSE.OBJ SRC/M_MAP.OBJ SRC/M_EOS.OBJ SRC/M_SERVER.OBJ \
  SRC/M_STATS.OBJ SRC/M_SVSFLINE.OBJ SRC/M_DCCDENY.OBJ SRC/M_UNDCCDENY.OBJ \
- SRC/M_WHOWAS.OBJ
+ SRC/M_WHOWAS.OBJ SRC/M_CONNECT.OBJ
 
 ALL: CONF UNREAL.EXE WIRCD.EXE
 
@@ -622,6 +622,9 @@ src/m_undccdeny.obj: src/modules/m_undccdeny.c $(INCLUDES)
 
 src/m_whowas.obj: src/modules/m_whowas.c $(INCLUDES)
         $(CC) $(CFLAGS) src/modules/m_whowas.c
+
+src/m_connect.obj: src/modules/m_connect.c $(INCLUDES)
+        $(CC) $(CFLAGS) src/modules/m_connect.c
 
 src/win32/win32.res: src/win32/win32gui.rc
         $(RC) /l 0x409 /fosrc/win32/win32.res /i ./include /i ./src \
